--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -9,7 +9,7 @@
     "from collections import OrderedDict\n",
     "\n",
     "import torch\n",
-    "from torch import nn\n",
+    "import torch.nn as nn\n",
     "from tensordict import TensorDict\n",
     "from tensordict.nn import TensorDictModule, TensorDictSequential"
    ]
