--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import OrderedDict\n",
+    "\n",
     "import torch\n",
-    "from torch import nn\n",
+    "import torch.nn as nn\n",
     "from tensordict import TensorDict\n",
     "from tensordict.nn import TensorDictModule, TensorDictSequential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,40 +34,66 @@
     "relu1 = TensorDictModule(nn.ReLU(), in_keys=[(\"hidden\", \"linear1\")], out_keys=[(\"hidden\", \"relu1\")])\n",
     "linear2 = TensorDictModule(\n",
     "    nn.Linear(128, 3), in_keys=[(\"hidden\", \"relu1\")], out_keys=[(\"hidden\", \"linear2\")]\n",
-    ")\n",
-    "\n",
-    "block0 = TensorDictSequential(linear0, relu0)\n",
-    "block1 = TensorDictSequential(linear1, relu1, linear2)\n",
-    "\n",
-    "residual = TensorDictModule(lambda x, y: x + y, in_keys=[\"x\", \"linear2\"], out_keys=[\"y\"])\n",
-    "\n",
-    "block = TensorDictSequential(block0, block1, residual)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorDict(\n",
-       "    fields={\n",
-       "        x: Tensor(shape=torch.Size([5, 3]), device=cpu, dtype=torch.float32, is_shared=False),\n",
-       "        z: Tensor(shape=torch.Size([5, 8]), device=cpu, dtype=torch.float32, is_shared=False)},\n",
-       "    batch_size=torch.Size([5]),\n",
-       "    device=None,\n",
-       "    is_shared=False)"
+       "TensorDictSequential(\n",
+       "    module=ModuleList(\n",
+       "      (0): TensorDictModule(\n",
+       "          module=Linear(in_features=3, out_features=128, bias=True),\n",
+       "          device=cpu,\n",
+       "          in_keys=[('input', 'x')],\n",
+       "          out_keys=[('hidden', 'linear0')])\n",
+       "      (1): TensorDictModule(\n",
+       "          module=<built-in method relu of type object at 0x130e20088>,\n",
+       "          device=cpu,\n",
+       "          in_keys=[('hidden', 'linear0')],\n",
+       "          out_keys=[('hidden', 'relu0')])\n",
+       "    ),\n",
+       "    device=cpu,\n",
+       "    in_keys=[('input', 'x')],\n",
+       "    out_keys=[('hidden', 'linear0'), ('hidden', 'relu0')])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "td"
+    "TensorDictSequential(linear0, relu0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m block \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mSequential(OrderedDict(linear\u001b[38;5;241m=\u001b[39mnn\u001b[38;5;241m.\u001b[39mLinear(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m10\u001b[39m)))\n\u001b[0;32m----> 2\u001b[0m \u001b[43mblock\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlinear\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[0;32m~/projects/mol-gnn/.venv/lib/python3.12/site-packages/torch/nn/modules/container.py:143\u001b[0m, in \u001b[0;36mSequential.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    141\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m(OrderedDict(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_modules\u001b[38;5;241m.\u001b[39mitems())[idx]))\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 143\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_item_by_idx\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_modules\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/projects/mol-gnn/.venv/lib/python3.12/site-packages/torch/nn/modules/container.py:132\u001b[0m, in \u001b[0;36mSequential._get_item_by_idx\u001b[0;34m(self, iterator, idx)\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Get the idx-th item of the iterator.\"\"\"\u001b[39;00m\n\u001b[1;32m    131\u001b[0m size \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m--> 132\u001b[0m idx \u001b[38;5;241m=\u001b[39m \u001b[43moperator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43midx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;241m-\u001b[39msize \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m idx \u001b[38;5;241m<\u001b[39m size:\n\u001b[1;32m    134\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex \u001b[39m\u001b[38;5;132;01m{\u001b[39;00midx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is out of range\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "block = nn.Sequential(OrderedDict(linear=nn.Linear(10, 10)))\n",
+    "block['linear']"
    ]
   },
   {
@@ -151,12 +179,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "td.items"
+    "from torch.optim import Adam"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Adam (\n",
+       "Parameter Group 0\n",
+       "    amsgrad: False\n",
+       "    betas: (0.9, 0.999)\n",
+       "    capturable: False\n",
+       "    differentiable: False\n",
+       "    eps: 1e-08\n",
+       "    foreach: None\n",
+       "    fused: None\n",
+       "    lr: 0.001\n",
+       "    maximize: False\n",
+       "    weight_decay: 0\n",
+       ")"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W = nn.Linear(10, 10)\n",
+    "\n",
+    "opt = Adam(W.parameters())\n",
+    "\n",
+    "type(opt)(W.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
